# RAG-youtube

./: .env.sample  .envrc.sample  .gitignore  README.md  pyproject.toml
src/RAG-youtube/: __init__.py
src/rag-youtube/: __init__.py  main.py  model.py  settings.py  transcribe.py
src/youtube-rag/: __init__.py  embeddings.py  llm.py  main.py  settings.py  transcribe.py  transcription-elden-lore.txt  transcription-example.txt  transcription-rellana.txt
